--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -23,30 +23,83 @@
   justify-content: row;
   align-items: center;
 
-.buttonCart {
+  .buttonCart {
     display: flex;
     align-items: center;
-  
-    
+
     .heart {
       margin-right: 40px;
+      width: 18px;
+      height: 18px;
     }
     .cart {
       width: 18px;
+      height: 18px;
     }
     .buttonDelimiter {
-    width: 1px;
-    height: 25px;
-    background-color: rgba(43, 42, 42, 0.25);
-    margin-left: 14px;
-    margin-right: 14px;
+      width: 1px;
+      height: 25px;
+      background-color: rgba(43, 42, 42, 0.25);
+      margin-left: 14px;
+      margin-right: 14px;
     }
-      .span {
+    .price {
       color: #50220f;
       margin-top: 4px;
       font-weight: 600;
       font-size: 14px;
     }
-
+  }
 }
+
+@media (max-width: 1000px) {
+    
+  .mainLogo {
+    width: 240px;
+  }
+}
+
+@media (max-width: 600px) {
+  .mainLogo {
+    width: 160px;
+  }
+  .cart {
+    width: 14px;
+    height: 14px;
+  }
+  .heart {
+      margin-right: 20px;
+      width: 14px;
+      height: 14px;
+    }
+    .buttonDelimiter {
+     margin-left: 10px;
+      margin-right: 10px;
+    }
+    .price {
+      font-size: 10px;
+    }
+}
+
+@media (max-width: 400px) {
+    
+  .mainLogo {
+    width: 120px;
+  }
+    .cart {
+    width: 10px;
+    height: 10px;
+  }
+  .heart {
+      margin-right: 20px;
+      width: 10px;
+      height: 10px;
+    }
+    .buttonDelimiter {
+     margin-left: 10px;
+      margin-right: 10px;
+    }
+    .price {
+      font-size: 10px;
+    }
 }
