--- a/src/components/DressBlock/dressBlock.module.scss
+++ b/src/components/DressBlock/dressBlock.module.scss
@@ -1,4 +1,8 @@
 @import '../../../src/scss/variables';
+
+.dressWrap {
+  display: flex;
+  justify-content: center;
 .dressBlock {
   width: 240px;
   text-align: center;
@@ -27,22 +31,18 @@
     ul {
       display: flex;
       flex: 1;
-
-      &:first-of-type {
-        margin-bottom: 6px;
-      }
-
       li {
-        padding: 6px;
+        padding: 11px;
         flex: 1;
         cursor: pointer;
         font-weight: 600;
-        font-size: 14px;
+        font-size: 12px;
       }
            .active {
           background: #ffffff;
           box-shadow: 0px 2px 11px rgba(0, 0, 0, 0.04);
           border-radius: 100px;
+          text-align: center;
           cursor: auto;
         }
     }
@@ -62,4 +62,5 @@
     line-height: 27px;
     letter-spacing: 0.015em;
   }
+}
 }
