--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -23,20 +23,106 @@ body {
   }
 
   &__items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 11px;
+    grid-row-gap: 10px;
+    place-self: center;
+    @media (max-width: 1300px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+    @media (max-width: 1000px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: 700px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+
   }
 
   &__top {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media (max-width: 900px) {
+      flex-direction: column;
+      .categoriesWrap {
+        overflow: hidden;
+      }
+      .categories {
+        width: 600px;
+        overflow-x: scroll;
+        scroll-behavior: smooth;
+        scrollbar-width: none;
+
+        ul {
+          width: 780px;
+        }
+      }
+      ::-webkit-scrollbar {
+        display: none;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+        background: transparent;
+      }
+    }
+
+    @media (max-width: 700px) {
+      flex-direction: column;
+      .categories {
+        margin-top: 30px;
+        width: 390px;
+        overflow-x: scroll;
+        scroll-behavior: smooth;
+        scrollbar-width: none;
+      }
+      .sort {
+        margin-top: 8px;
+        b {
+          display: none;
+        }
+      }
+    }
+
+    @media (max-width: 500px) {
+      flex-direction: column;
+      .categories {
+        width: 295px;
+        overflow-x: scroll;
+        scroll-behavior: smooth;
+        scrollbar-width: none;
+
+        .sort {
+          margin-top: 8px;
+          b {
+            display: none;
+          }
+        }
+      }
+    }
+    @media (max-width: 400px) {
+      flex-direction: column;
+      .categories {
+        width: 255px;
+        overflow-x: scroll;
+        scroll-behavior: smooth;
+        scrollbar-width: none;
+
+        .sort {
+          margin-top: 8px;
+          b {
+            display: none;
+          }
+        }
+      }
+    }
   }
 }
 
 .container {
-  width: $container-width;
+  width: 90%;
   margin: 0 auto;
 
   &--cart {
