--- a/src/components/CartBlock/cartItem.module.scss
+++ b/src/components/CartBlock/cartItem.module.scss
@@ -22,58 +22,122 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin: 20px;
 
   .cartWrap {
-    display: flex;
-    flex-direction: column;
-    .cartItems {
+    // width: 80%;
+    // height: 700px;
+    // overflow-y: scroll;
+    // scroll-behavior: smooth;
+
+     .cartItems {
       background-color: #ffffff;
       border-radius: 20px;
       box-shadow: 0px 25px 40px #1687d933;
       margin: auto;
       margin-bottom: 20px;
-      width: 450px;
-      height: 45%;
+      width: 700px;
+      height: 195px;
       display: flex;
       justify-content: space-between;
-      align-items: center;
       .imageBox {
-        text-align: center;
         background-color: #f5f5f5;
         margin: 20px;
         border-radius: 17px;
+        height: 160px;
+        width: 170px;
         .cartImg {
-          height: 150px;
-          width: 100px;
+          height: 142px;
+          width: 107px;
+          margin-left: 8px;
+          margin-top: 8px;
           border-radius: 17px;
         }
       }
-      .about {
-        margin-top: 20px;
-        margin: 20px;
+      .infoLeft {
         display: flex;
-        flex-direction: column;
-        //align-items: flex-start;
+        justify-content: space-around;
+        margin: 15px;
+        margin-top: 22px;
         width: 100%;
+        .about {
+          color: #202020;
+          width: 100%;
+          .title {
+            padding-top: 5px;
+            line-height: 10px;
+            font-size: 16px;
+            font-weight: 800;
+            color: #202020;
+          }
+          .size {
+            color: #202020;
+            font-size: 12px;
+          }
+          .prices {
+            color: #202020;
+          }
+          .before {
+            text-decoration: line-through;
+          }
+          .after {
+            color: red;
+          }
+          .btn {
+            height: 40px;
+            width: 90px;
+            outline: 0;
+            margin-top: 10px;
+          }
+        }
       }
-      .title {
-        padding-top: 5px;
-        line-height: 10px;
-        font-size: 16px;
-        font-weight: 800;
-        color: #202020;
-      }
-      .subtitle {
-        line-height: 10px;
-        font-size: 18px;
-        font-weight: 600;
-        color: #909090;
+
+      .infoRight {
+        .trash {
+          margin-left: 30px;
+          cursor: pointer;
+        }
+        .counterWrap {
+          margin-right: 10px;
+          .counter {
+            display: flex;
+            justify-content: space-around;
+            font-size: 16px;
+            .plus {
+              border: 1px solid #f6f6f6;
+              background-color: #f6f6f6;
+              cursor: pointer;
+              border-radius: 30px;
+              margin-right: 10px;
+              width: 24px;
+              height: 24px;
+              P {
+                text-align: center;
+                color: #202020;
+              }
+            }
+            .minus {
+              margin-left: 10px;
+              border: 1px solid #f6f6f6;
+              background-color: #f6f6f6;
+              border-radius: 30px;
+              width: 24px;
+              height: 24px;
+              P {
+                text-align: center;
+                color: #202020;
+              }
+            }
+          }
+        }
       }
     }
   }
 }
 
 .checkoutBlock {
+ position: sticky;
+ top: 0;
   background-color: #ffffff;
   border-radius: 20px;
   box-shadow: 0px 25px 40px #1687d933;
@@ -99,37 +163,38 @@
     justify-content: space-between;
   }
   .checkoutBtn {
-    background-color: initial;
-    background-image: linear-gradient(-180deg, #ff7e31, #e62c03);
-    border-radius: 20px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px;
-    color: #ffffff;
-    cursor: pointer;
-    display: inline-block;
     margin: 0 auto;
-
     height: 40px;
     line-height: 40px;
     outline: 0;
     margin: 10px;
     margin-left: 14px;
     margin-bottom: 12px;
-    overflow: hidden;
-    padding: 0 25px;
-    pointer-events: auto;
-    position: relative;
-    text-align: center;
-    touch-action: manipulation;
-    user-select: none;
-    -webkit-user-select: none;
-    vertical-align: top;
-    white-space: nowrap;
-    width: 90%;
-    z-index: 9;
-    border: 0;
-    transition: box-shadow 0.2s;
   }
   .checkoutBtn:hover {
     box-shadow: rgba(253, 76, 0, 0.5) 0 3px 8px;
   }
+}
+button {
+  background-color: initial;
+  background-image: linear-gradient(-180deg, #ff7e31, #e62c03);
+  border-radius: 20px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-block;
+  overflow: hidden;
+  padding: 0 25px;
+  pointer-events: auto;
+  position: relative;
+  text-align: center;
+  touch-action: manipulation;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: top;
+  white-space: nowrap;
+  width: 90%;
+  z-index: 9;
+  border: 0;
+  transition: box-shadow 0.2s;
 }
