add pagination and redux library

--- a/src/components/SearchBar/searchBar.module.scss
+++ b/src/components/SearchBar/searchBar.module.scss
@@ -19,7 +19,7 @@
     outline-offset: 0;
     outline: none;
     border: none;
-    color: #7e4e05;
+    color: #6b6762;
     font-size: 14px;
     margin-top: 6px;
     margin-bottom: 6px;
