--- a/src/components/CartBlock/cartItem.module.scss
+++ b/src/components/CartBlock/cartItem.module.scss
@@ -84,6 +84,7 @@
             color: red;
           }
           .btn {
+            // margin: 0 auto;
             height: 40px;
             width: 90px;
             outline: 0;
