implement logic for DressBlock component and remove unnecessary files

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -36,6 +36,13 @@
       width: 18px;
       height: 18px;
     }
+    .amount {
+      margin-left: 5px;
+      color: #50220f;
+      margin-top: 4px;
+      font-weight: 600;
+      font-size: 14px;
+    }
     .buttonDelimiter {
       width: 1px;
       height: 25px;
